--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
 body {
+  background-color: #ffff;
+  color: #434455;
   font-family: "Roboto", sans-serif;
 }
 .header-logo {
@@ -8,10 +10,10 @@ body {
   line-height: 117%;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: #4d5ae5;
 }
 .header-logo-color {
-  color: #4d5ae5;
+  color: #2e2f42;
 }
 .header-list {
   font-weight: 500;
@@ -39,7 +41,7 @@ body {
   color: #fff;
 }
 .main-button {
-  font-weight: 500;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.04em;
@@ -115,6 +117,15 @@ body {
   color: #f4f4fd;
 }
 .footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 117%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+.footer-logo-color {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
