--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,24 @@ body {
 .header-logo-color {
   color: #2e2f42;
 }
+.list-item {
+  color: #2e2f42;
+}
+.list-item:hover {
+  color: #404bbf;
+}
+.list-item:focus {
+  color: #404bbf;
+}
 .header-list {
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+.address {
+  font-style: normal;
 }
 .header-contacts {
   font-weight: 400;
