--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@ body {
   justify-content: center;
   align-items: center;
   padding-top: 180px;
+  padding: 188px 0;
 }
 .main-title {
   font-weight: 700;
@@ -113,6 +114,7 @@ body {
   margin: 0 auto;
   height: 56px;
   margin-top: 48px;
+  min-width: 169px;
 }
 .main-button:hover {
   background-color: #404bbf;
@@ -156,6 +158,7 @@ body {
   margin-bottom: 137px;
 }
 .div-container-team {
+  padding: 120px 0;
 }
 
 .our-section-team {
@@ -163,7 +166,7 @@ body {
   width: 1550px;
   height: 732px;
 }
-.second-title {
+.our-second-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 111%;
@@ -202,6 +205,9 @@ body {
 }
 img {
   display: block;
+}
+.div-container-team {
+  padding: 32px 0;
 }
 .team-names {
   font-weight: 500;
@@ -273,6 +279,7 @@ img {
   margin-top: 100px;
   margin-left: 156px;
   text-decoration: none;
+  display: inline-block;
 }
 .footer-logo-color {
   font-family: "Raleway", sans-serif;
