--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,12 @@ img {
   color: #434455;
   margin-top: 8px;
 }
+.our-portfolio-section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.div-portfolio-container {
+}
 .portfolio {
   font-weight: 700;
   font-size: 36px;
@@ -234,15 +240,15 @@ img {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
-  justify-content: space-between;
-  margin-right: 156px;
-  margin-left: 156px;
   gap: 24px;
+  row-gap: 48px;
+  margin: 0%;
 }
 .portfolio-items {
   font-weight: 500;
@@ -250,6 +256,15 @@ img {
   line-height: 120%;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
+}
+.first-item-list {
+  width: calc((100% - 48px) / 3);
+}
+.div-list-item {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 .portfolio-text {
   font-weight: 400;
