--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,8 @@ body {
 }
 .div-main-container {
   height: 600px;
+  width: 1158px;
+  padding: 0 15px;
   background: #2e2f42;
   justify-content: center;
   align-items: center;
@@ -90,7 +92,6 @@ body {
   padding: 188px 0;
 }
 .main-title {
-  width: 1158px;
   font-weight: 700;
   font-size: 56px;
   line-height: 107%;
