--- a/css/styles.css
+++ b/css/styles.css
@@ -299,6 +299,7 @@ img {
   margin-left: 156px;
   text-decoration: none;
   display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-logo-color {
   font-family: "Raleway", sans-serif;
@@ -314,8 +315,9 @@ img {
   width: 1519px;
   height: 312px;
   display: flex;
+  padding: 100px 0;
 }
-.footer-container {
+.our-footer-container {
   display: flex;
   flex-direction: column;
 }
