--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,6 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 264px;
   height: 380px;
   gap: 24px;
   width: calc((100% - 72px) / 4);
@@ -213,7 +212,7 @@ img {
 .div-container-team {
   padding: 32px 0;
 }
-.team-names {
+.our-team-names {
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
