--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ body {
   margin-right: 156px;
   align-items: center;
 }
-.worker {
+.worker-item {
   background-color: #ffffff;
   border-radius: 0 0 4px 4px;
   padding: 0px 0px 32px 0px;
