--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,9 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.our-features-section {
+  padding: 120px 0;
+}
 .features {
   display: flex;
   gap: 24px;
@@ -146,12 +149,16 @@ body {
   padding-right: 156px;
   align-items: center;
 }
+.features-list-item {
+  width: calc((100% - 72px) / 4);
+}
 .list-features {
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .text-features {
   font-weight: 400;
@@ -266,6 +273,8 @@ img {
   margin-bottom: 8px;
 }
 .div-portfolio-item {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
 }
 .first-item-list {
   width: calc((100% - 48px) / 3);
@@ -300,7 +309,6 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  margin-top: 100px;
   margin-left: 156px;
   text-decoration: none;
   display: inline-block;
