--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {
   height: 72px;
   background-color: #ffffff;
   display: flex;
+  padding: 0 15px;
 }
 .header-navigation {
   display: flex;
