--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,7 @@ body {
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .worker-list-item {
-  padding-top: 32ox;
+  padding-top: 32px;
   padding-bottom: 32px;
 }
 .photo {
