--- a/css/styles.css
+++ b/css/styles.css
@@ -280,7 +280,7 @@ img {
   border-top: none;
 }
 .first-item-list {
-  width: calc((100% - 48px) / 3);
+  width: calc(100% - 2 * 24) / 3;
 }
 .div-list-item {
   padding: 32px 16px;
