--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,12 @@ body {
   border-bottom: 1px solid #e7e9fc;
 }
 .header-container {
+  width: 1158px;
   height: 72px;
   background-color: #ffffff;
   display: flex;
   padding: 0 15px;
 }
-
 .header-navigation {
   display: flex;
   align-items: center;
