--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  margin-left: 156px;
   text-decoration: none;
   margin-right: 76px;
 }
@@ -54,7 +53,6 @@ body {
   color: #2e2f42;
   display: flex;
   gap: 40px;
-  margin-left: 76px;
   list-style-type: none;
 }
 .address {
@@ -68,7 +66,6 @@ body {
   color: #434455;
   display: flex;
   gap: 40px;
-  margin-right: 156px;
   list-style-type: none;
 }
 .contacts {
@@ -89,9 +86,9 @@ body {
   max-width: 1158px;
   padding: 0 15px;
   background: #2e2f42;
-  justify-content: center;
   align-items: center;
   padding-top: 180px;
+  margin: 0 auto;
 }
 .main-title {
   font-weight: 700;
@@ -100,7 +97,7 @@ body {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  margin: auto;
+  margin: 0 auto;
   max-width: 496px;
 }
 .main-button {
@@ -119,7 +116,6 @@ body {
   display: block;
   margin: 0 auto;
   height: 56px;
-  margin-top: 48px;
   min-width: 169px;
 }
 .main-button:hover {
@@ -132,7 +128,6 @@ body {
   position: absolute;
   width: 1px;
   height: 1px;
-  margin: -1px;
   border: 0;
   padding: 0;
   white-space: nowrap;
@@ -147,9 +142,8 @@ body {
   display: flex;
   gap: 24px;
   list-style-type: none;
-  padding-left: 156px;
-  padding-right: 156px;
-  align-items: center;
+  padding-left: 0;
+  margin: 0 auto;
 }
 .features-list-item {
   width: calc((100% - 72px) / 4);
@@ -168,7 +162,6 @@ body {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #434455;
-  margin-bottom: 137px;
 }
 .div-container-team {
   padding: 32px 0;
@@ -247,8 +240,6 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-.div-portfolio-container {
-}
 .portfolio {
   font-weight: 700;
   font-size: 36px;
@@ -265,7 +256,7 @@ img {
   list-style-type: none;
   gap: 24px;
   row-gap: 48px;
-  margin: 0%;
+  margin: 0 auto;
 }
 .portfolio-items {
   font-weight: 500;
@@ -280,7 +271,7 @@ img {
   border: 1px solid #e7e9fc;
   border-top: none;
 }
-.first-item-list {
+.first-item-list :first-child {
   width: calc((100% - 48px) / 3);
 }
 .div-list-item {
