--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   padding: 0 15px;
   margin: 0 auto;
+  align-items: center;
 }
 .header-navigation {
   display: flex;
@@ -126,6 +127,7 @@ body {
   position: absolute;
   width: 1px;
   height: 1px;
+  margin: -1;
   border: 0;
   padding: 0;
   white-space: nowrap;
@@ -145,10 +147,8 @@ body {
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
-  width: 264px;
-}
-.features-list-item :first-child {
-  width: calc(((100%-72px) / 4));
+  width: calc((100% - 72px) / 4);
+  margin: 0 auto;
 }
 .list-features {
   font-weight: 500;
@@ -198,6 +198,7 @@ body {
   text-align: center;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  width: calc((100% - 72px) / 4);
 }
 .worker-list-item {
   padding-top: 32px;
@@ -264,7 +265,13 @@ img {
   border-top: none;
 }
 .first-item-list {
-  width: calc((100%-48px) / 3);
+  width: calc((100% - 48px) / 3);
+}
+.div-portfolio-container {
+  margin: 0 auto;
+}
+.div-portfolio-container {
+  margin: 0 auto;
 }
 .div-list-item {
   padding: 32px 16px;
