--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,13 @@ body {
 .header {
   border-bottom: 1px solid #e7e9fc;
 }
+.container {
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .header-container {
   width: 1158px;
   height: 72px;
@@ -82,12 +89,6 @@ body {
 .our-main-section {
   padding: 188px 0;
   background: #2e2f42;
-}
-.div-main-container {
-  max-width: 1440px;
-  padding: 0 15px;
-  text-align: center;
-  margin: 0;
 }
 .main-title {
   font-weight: 700;
@@ -168,8 +169,7 @@ body {
 .our-section-team {
   background-color: #f4f4fd;
   text-align: center;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding: 120px 0;
 }
 .our-second-title {
   font-weight: 700;
@@ -185,9 +185,6 @@ body {
   display: flex;
   gap: 24px;
   justify-content: space-evenly;
-  flex-wrap: wrap;
-  margin-left: 156px;
-  margin-right: 156px;
 }
 .worker-item {
   background-color: #ffffff;
@@ -203,15 +200,6 @@ body {
 .worker-list-item {
   padding-top: 32px;
   padding-bottom: 32px;
-}
-.photo {
-  align-items: center;
-}
-img {
-  display: block;
-}
-.div-container-team {
-  padding: 32px 0;
 }
 .our-team-names {
   font-weight: 500;
@@ -247,6 +235,7 @@ img {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
   list-style-type: none;
   column-gap: 24px;
   row-gap: 48px;
@@ -267,17 +256,6 @@ img {
 .first-item-list {
   width: calc((100% - 48px) / 3);
 }
-.div-portfolio-container {
-  margin: 0 auto;
-}
-.div-portfolio-container {
-  margin: 0 auto;
-}
-.div-list-item {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
 .portfolio-text {
   font-weight: 400;
   font-size: 16px;
@@ -291,8 +269,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  margin-top: 16px;
-  margin-left: 156px;
   max-width: 264px;
 }
 .footer-logo {
@@ -303,10 +279,8 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  margin-left: 156px;
   text-decoration: none;
   display: inline-block;
-  margin-bottom: 16px;
 }
 .footer-logo-color {
   font-family: "Raleway", sans-serif;
@@ -319,8 +293,5 @@ img {
 }
 .footer {
   background: #2e2f42;
-  width: 1519px;
-  height: 312px;
-  display: flex;
   padding: 100px 0;
 }
