--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
-  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 72px) / 4);
   margin: 0 auto;
 }
 .list-features {
@@ -165,6 +165,9 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+}
+.img {
+  display: block;
 }
 .our-section-team {
   background-color: #f4f4fd;
@@ -195,7 +198,7 @@ body {
   text-align: center;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 72px) / 4);
 }
 .worker-list-item {
   padding-top: 32px;
@@ -281,6 +284,7 @@ body {
   color: #4d5ae5;
   text-decoration: none;
   display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-logo-color {
   font-family: "Raleway", sans-serif;
