--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@ body {
 }
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 ul,
 ol {
@@ -52,11 +54,24 @@ ol {
   text-decoration: none;
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.list-item:hover {
-  color: #404bbf;
+.list-item.current {
+  position: relative;
 }
-.list-item:focus {
+.list-item.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  background-color: #404bbf;
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+}
+.list-item:hover,
+.list-item:focus,
+.list-item.current {
   color: #404bbf;
 }
 .header-list {
@@ -85,6 +100,7 @@ ol {
 .contacts {
   color: #434455;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts:hover {
   color: #404bbf;
@@ -92,9 +108,17 @@ ol {
 .contacts:focus {
   color: #404bbf;
 }
-.our-main-section {
+.main-section {
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   padding: 188px 0;
-  background: #2e2f42;
+  background-color: #2e2f42;
 }
 .main-title {
   font-weight: 700;
@@ -149,6 +173,19 @@ ol {
   display: flex;
   gap: 24px;
   list-style-type: none;
+}
+.div-features-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 264px;
+  height: 112px;
+  background-color: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+}
+.icon-features {
+  fill: #f4f4fd;
 }
 .features-list-item {
   width: 264px;
@@ -227,6 +264,31 @@ img {
   text-align: center;
   color: #434455;
 }
+.icon-list {
+  display: flex;
+  gap: 24px;
+  padding-left: 16px;
+}
+.icon-item {
+  width: 40px;
+  height: 40px;
+}
+.icon-link:hover,
+.icon-link:focus {
+  background-color: #404bbf;
+}
+.icon-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+.icon-app {
+  fill: #4d5ae5;
+}
 .our-portfolio-section {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -264,13 +326,35 @@ img {
 }
 .first-item-list {
   width: calc((100% - 48px) / 3);
+  position: relative;
 }
+.first-item-list:hover .portfolio-list-text {
+  transform: translateY(0);
+}
+
 .portfolio-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+}
+.portfolio-list-text {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  background-color: #4d5ae5;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  transform: translateY(100%);
+  transition: transform 300ms linear;
+}
+.div-portfolio {
+  position: relative;
+  overflow: hidden;
 }
 .footer-text {
   font-weight: 400;
@@ -292,6 +376,10 @@ img {
   display: inline-block;
   margin-bottom: 16px;
 }
+.our-footer-container {
+  margin-right: 120px;
+  margin-left: 156px;
+}
 .footer-logo-color {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -304,4 +392,26 @@ img {
 .footer {
   background: #2e2f42;
   padding: 100px 0;
+  display: flex;
+  flex-direction: row;
+}
+.div-footer {
+  display: flex;
+  flex-direction: column;
+}
+.container-div {
+  display: flex;
+}
+.footer-icon {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+.footer-icon:hover,
+.footer-icon:focus {
+  background-color: #31d0aa;
 }
