--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,7 @@ ol {
   display: block;
   margin: auto;
   min-width: 169px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-button:hover {
   background-color: #404bbf;
@@ -183,6 +184,7 @@ ol {
   background-color: #f4f4fd;
   border: 1px solid #8e8f99;
   border-radius: 4px;
+  margin-bottom: 8px;
 }
 .icon-features {
   fill: #f4f4fd;
@@ -266,12 +268,13 @@ img {
 }
 .icon-list {
   display: flex;
+  justify-content: center;
   gap: 24px;
-  padding-left: 16px;
 }
 .icon-item {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-link:hover,
 .icon-link:focus {
@@ -287,7 +290,7 @@ img {
   background-color: #4d5ae5;
 }
 .icon-app {
-  fill: #4d5ae5;
+  fill: #f4f4fd;
 }
 .our-portfolio-section {
   padding-top: 120px;
@@ -327,6 +330,7 @@ img {
 .first-item-list {
   width: calc((100% - 48px) / 3);
   position: relative;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .first-item-list:hover .portfolio-list-text {
   transform: translateY(0);
@@ -354,19 +358,21 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   transform: translateY(100%);
-  transition: transform 300ms linear;
+  padding: 40px 32px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .div-portfolio-text {
   position: relative;
   overflow: hidden;
 }
 .footer-text {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
   max-width: 264px;
+  font-weight: 500;
+  color: #ffffff;
+  margin-bottom: 16px;
 }
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -405,6 +411,7 @@ img {
 }
 .container-div {
   display: flex;
+  align-items: baseline;
 }
 .footer-icon {
   width: 100%;
@@ -414,6 +421,11 @@ img {
   justify-content: center;
   border-radius: 50%;
   background-color: #4d5ae5;
+}
+.icon-list-footer {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
 }
 .footer-icon:hover,
 .footer-icon:focus {
