--- a/css/styles.css
+++ b/css/styles.css
@@ -431,6 +431,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
+  margin-bottom: 16px;
 }
 .icon-list-footer {
   display: flex;
