--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,14 @@ img {
   width: 165px;
   height: 40px;
 }
+.form-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
 .icon-send {
 }
 /* modal */
