--- a/css/styles.css
+++ b/css/styles.css
@@ -457,19 +457,19 @@ img {
   width: 264px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: #2e2f42;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  color: #ffffff;
 }
 .footer-email-form {
   display: flex;
   gap: 24px;
 }
 .footer-form::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 200%;
-  letter-spacing: 0.04em;
-  color: #fff;
-  padding-left: 16px;
+  color: #ffffff;
 }
 .footer-form-div {
   display: flex;
