--- a/css/styles.css
+++ b/css/styles.css
@@ -473,6 +473,8 @@ img {
 }
 .footer-form-div {
   display: flex;
+  flex-direction: column;
+  margin-left: 80px;
 }
 .footer-button-div {
   font-weight: 500;
