--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,7 @@ img {
 .portfolio-items {
   font-weight: 500;
   font-size: 20px;
-  line-height: 120%;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
@@ -518,8 +518,7 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: visibility 300ms linear, opacity 300ms linear,
-    pointer-events 300ms linear;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-open {
   visibility: visible;
@@ -538,20 +537,25 @@ img {
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   padding-left: 34px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-button {
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 21px;
-  right: 14px;
-  border-radius: 100%;
+  padding: 0;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
   stroke-width: 1px;
   stroke: rgba(0, 0, 0, 0.1);
   width: 24px;
   height: 24px;
-  transition: background-color 300ms linear;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  background-color: #e7e9fc;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-button:hover,
 .modal-close-button:active {
