--- a/css/styles.css
+++ b/css/styles.css
@@ -558,7 +558,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-button:hover,
-.modal-close-button:active {
+.modal-close-button:focus {
   fill: #fff;
   background-color: #404bbf;
   border: none;
