--- a/css/styles.css
+++ b/css/styles.css
@@ -518,7 +518,8 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-open {
   visibility: visible;
@@ -537,7 +538,6 @@ img {
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   padding-left: 34px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-button {
   display: flex;
@@ -555,7 +555,8 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
   background-color: #e7e9fc;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-button:hover,
 .modal-close-button:focus {
