--- a/css/styles.css
+++ b/css/styles.css
@@ -530,6 +530,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 72px 24px 24px 24px;
   border-radius: 4px;
   width: 408px;
   min-height: 584px;
@@ -538,6 +539,7 @@ img {
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   padding-left: 34px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-button {
   display: flex;
@@ -563,6 +565,9 @@ img {
   fill: #fff;
   background-color: #404bbf;
   border: none;
+}
+.icon-close-button {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-text {
   font-family: "Roboto", sans-serif;
