--- a/css/styles.css
+++ b/css/styles.css
@@ -582,7 +582,8 @@ img {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.7;
+  line-height: 1.17;
+  margin-bottom: 4px;
   letter-spacing: 0.04em;
   color: #8e8f99;
   display: block;
@@ -594,7 +595,9 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   padding-left: 38px;
   outline: none;
-  transition: background-color 300ms linear;
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-top: 4px;
 }
 .modal-input:hover,
