--- a/css/styles.css
+++ b/css/styles.css
@@ -576,7 +576,7 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  margin-top: 72px;
+  margin-bottom: 16px;
 }
 .modal-name {
   font-family: "Roboto", sans-serif;
@@ -586,7 +586,6 @@ img {
   margin-bottom: 4px;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: block;
 }
 .modal-input {
   width: 100%;
@@ -607,15 +606,12 @@ img {
 .modal-input-div {
   position: relative;
 }
-.form-div {
-  margin-right: 9px;
-}
 .modal-icon {
   position: absolute;
   top: 50%;
   left: 16px;
   transform: translateY(-50%);
-  transition: fill 300ms linear;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:focus + .modal-icon {
   fill: #4d5ae5;
@@ -692,7 +688,7 @@ img {
 .custom-checkbox {
   margin-right: 8px;
 }
-.form-button {
+.form-button-div {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
