--- a/css/styles.css
+++ b/css/styles.css
@@ -639,21 +639,17 @@ img {
   width: 360px;
   height: 120px;
   resize: none;
-  padding-left: 16px;
-  padding-top: 8px;
-  transition: border-color 300ms linear;
-  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+  padding: 8px 16px;
+  background-color: transparent;
+  color: rgba(46, 47, 66, 0.4);
+  letter-spacing: 0.04em;
+  line-height: 1.17;
+  font-size: 12px;
 }
 .modal-text-comment:focus {
   border-color: #4d5ae5;
-}
-.modal-text-comment::placeholder {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.7;
-  letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
 }
 .input-checkbox {
   border-radius: 2px;
@@ -707,4 +703,5 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   margin-bottom: 24px;
+  display: block;
 }
