--- a/css/styles.css
+++ b/css/styles.css
@@ -624,6 +624,7 @@ img {
   margin-bottom: 8px;
 }
 .form-text-div {
+  margin-bottom: 16px;
 }
 .form-text-label {
   font-family: "Roboto", sans-serif;
