--- a/css/styles.css
+++ b/css/styles.css
@@ -710,3 +710,9 @@ img {
 .checkbox-div {
   margin-bottom: 24px;
 }
+.label-checkbox {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
