--- a/css/styles.css
+++ b/css/styles.css
@@ -662,15 +662,26 @@ img {
   justify-content: center;
   align-items: center;
 }
-.custom-checkbox {
+.custom-checkbox-footer {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.7;
   letter-spacing: 0.04em;
   color: #8e8f99;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
 }
-.text-link {
+.text-link-footer {
   line-height: 1.3;
   text-decoration: underline;
   text-decoration-skip-ink: none;
