--- a/css/styles.css
+++ b/css/styles.css
@@ -681,7 +681,10 @@ img {
   justify-content: center;
   fill: transparent;
 }
-.text-link-footer {
+.input-checkbox:checked .custom-checkbox-footer {
+  background-color: #404bbf;
+  border: none;
+}
   line-height: 1.3;
   text-decoration: underline;
   text-decoration-skip-ink: none;
