--- a/css/styles.css
+++ b/css/styles.css
@@ -681,14 +681,9 @@ img {
   justify-content: center;
   fill: transparent;
 }
-.input-checkbox:checked .custom-checkbox-footer {
+.input-checkbox:checked + .label-checkbox > .custom-checkbox-footer {
   background-color: #404bbf;
   border: none;
-}
-  line-height: 1.3;
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
-  color: #4d5ae5;
 }
 ::placeholder {
   font-weight: 400;
