--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,15 @@ body {
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
 ul,
 ol {
   list-style-type: none;
@@ -714,6 +723,7 @@ img {
   position: absolute;
   left: 50%;
   margin-bottom: 24px;
+  margin-top: 24px;
   transform: translate(-50%, -50%);
 
   display: block;
