--- a/css/styles.css
+++ b/css/styles.css
@@ -480,7 +480,7 @@ button {
   color: #434455;
   font-weight: 500;
 }
-@media screen and (min-width: 768px) {
+/*@media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
   }
@@ -492,4 +492,4 @@ button {
   .features-list-item {
     width: calc((100% - 24px) / 2);
   }
-}
+}*/
