--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -182,8 +182,8 @@ ol {
   overflow: hidden;
 }
 .our-features-section {
-  /*padding: 120px 0;
-  padding-top: 96px;*/
+  padding: 120px 0;
+  padding-top: 96px;
   padding-bottom: 96px;
   padding-top: 96px;
 }
