--- a/css/styles.css
+++ b/css/styles.css
@@ -449,10 +449,10 @@ button {
 .features {
   list-style-type: none;
   display: flex;
-  /*flex-direction: column;*/
+  flex-direction: column;
   padding-left: 15px;
   padding-right: 15px;
-  /* row-gap: 72px;*/
+  row-gap: 72px;
   max-width: 288px;
 }
 .features-list-item {
@@ -480,13 +480,10 @@ button {
   font-weight: 500;
 }
 @media screen and (min-width: 768px) {
-  .container {
-  }
   .features {
-    /*display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    column-gap: 24px;*/
+    column-gap: 24px;
   }
   .features-list-item {
     width: calc((100% - 24px) / 2);
@@ -635,5 +632,267 @@ img {
   }
   .worker-item {
     flex-basis: calc((100% - 72px) / 4);
+  }
+}
+/* our portfolio */
+.our-portfolio-section {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+.portfolio {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+.div-portfolio-item {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+.portfolio-list {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  row-gap: 48px;
+}
+.portfolio-items {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+.first-item-list {
+  position: relative;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.first-item-list:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.first-item-list:hover .portfolio-list-text {
+  transform: translateY(0);
+}
+.portfolio-list-text:hover {
+  transform: translateY(0%);
+}
+.portfolio-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.portfolio-list-text {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  background-color: #4d5ae5;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  transform: translateY(100%);
+  padding: 40px 32px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.div-portfolio-text {
+  position: relative;
+  overflow: hidden;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 24px;
+  }
+  .first-item-list {
+    width: calc((100% - 24px) / 2);
+  }
+}
+@media screen and (min-width: 1158px) {
+  .our-portfolio-section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .portfolio-list {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    column-gap: 24px;
+  }
+  .first-item-list {
+    width: calc((100% - 48px) / 3);
+    position: relative;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+/* footer */
+.footer-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  max-width: 288px;
+  font-weight: 400;
+  color: #ffffff;
+  padding-top: 16px;
+}
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  text-decoration: none;
+  display: inline-block;
+}
+.footer-logo-color {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #f4f4fd;
+}
+.footer {
+  background: #2e2f42;
+  padding: 96px 0;
+  display: flex;
+  flex-direction: row;
+}
+.our-footer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer-text-social {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-top: 0;
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-icon {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-list-footer {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
+.footer-icon:hover,
+.footer-icon:focus {
+  background-color: #31d0aa;
+}
+.div-footer {
+  margin-top: 72px;
+  margin-bottom: 72px;
+}
+.footer-form-name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  gap: 24px;
+}
+.form-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+.footer-form {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  color: #ffffff;
+}
+.footer-form::placeholder {
+  color: #fff;
+}
+.footer-button-div {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  background: #4d5ae5;
+  border-radius: 4px;
+  padding: 8px 24px;
+  width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+  min-width: 165px;
+  margin: 0 auto;
+  margin-top: 16px;
+}
+.footer-form-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.icon-send {
+  margin-left: 16px;
+}
+@media screen and (min-width: 768px) {
+  .div-footer {
+    display: flex;
+    flex-direction: column;
+  }
+  .container-div {
+    margin-left: 108px;
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    gap: 24px;
+  }
+  .footer-email-form {
+    display: flex;
+    gap: 24px;
+  }
+  .footer-text-social {
+    justify-content: flex-start;
+  }
+  .form-text {
+    justify-content: flex-start;
   }
 }
