--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -536,7 +536,7 @@ img {
   margin-left: 16px;
 }
 /* ======== MODAL ======== */
-.backdrop {
+/*.backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -549,27 +549,27 @@ img {
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.backdrop.is-open {
+}*/
+/*.backdrop.is-open {
   visibility: visible;
   pointer-events: auto;
   opacity: 1;
-}
-.modal {
+}*/
+.modal /*{
   position: absolute;
   top: 50%;
   left: 50%;
   padding: 72px 24px 24px;
-  border-radius: 4px;
+  border-radius: 4px;*/
   width: 408px;
-  min-height: 584px;
+  /*min-height: 584px;
   transform: translate(-50%, -50%);
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-close-button {
+}*/
+/*.modal-close-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -596,8 +596,8 @@ img {
 }
 .icon-close-button {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-text {
+}*/
+/*.modal-text {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -606,8 +606,8 @@ img {
   text-align: center;
   color: #2e2f42;
   margin-bottom: 16px;
-}
-.modal-name {
+}*/
+/*.modal-name {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
@@ -616,8 +616,8 @@ img {
   letter-spacing: 0.04em;
   color: #8e8f99;
   display: block;
-}
-.modal-input {
+}*/
+/*.modal-input {
   width: 100%;
   height: 40px;
   border-radius: 4px;
@@ -632,8 +632,8 @@ img {
 .modal-input:hover,
 .modal-input:focus {
   border-color: #4d5ae5;
-}
-.modal-input-div {
+}*/
+/*.modal-input-div {
   position: relative;
 }
 .modal-icon {
@@ -655,20 +655,20 @@ img {
 }
 .form-text-div {
   margin-bottom: 16px;
-}
-.form-text-label {
+}*/
+/*.form-text-label {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.7;
   letter-spacing: 0.04em;
   color: #8e8f99;
-}
-.modal-text-comment {
+}*/
+.modal-text-comment /*{
   border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
+  border-radius: 4px;*/
   width: 360px;
-  height: 120px;
+  /*height: 120px;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: transparent;
@@ -678,11 +678,11 @@ img {
   letter-spacing: 0.04em;
   line-height: 1.17;
   font-size: 12px;
-}
-.modal-text-comment:focus {
+}*/
+/*.modal-text-comment:focus {
   border-color: #4d5ae5;
-}
-.input-checkbox {
+}*/
+/*.input-checkbox {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   width: 16px;
@@ -714,8 +714,8 @@ img {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
-}
-::placeholder {
+}*/
+/*::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.7;
@@ -724,8 +724,8 @@ img {
 }
 .custom-checkbox {
   margin-right: 8px;
-}
-.form-button-div {
+}*/
+/*.form-button-div {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
@@ -746,7 +746,7 @@ img {
   margin-top: 24px;
   transform: translate(-50%, -50%);
   display: block;
-}
+}*/
 .checkbox-div {
   margin-bottom: 24px;
 }
